[tool.poetry]
name = "Access"
version = "0.0.1"
description = "Access for RCS."
authors = ["mio <liurusi.101@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.6"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
fastapi = "^0.65.0"
tenacity = "^6.1.0"
pydantic = "^1.4"
aio-pika = "^6.8.0"
aiocache = {extras = ["redis"], version = "^0.11.1"}
uvloop = "^0.15.2"
python-dateutil = "^2.8.1"
pytz = "^2021.1"
tzlocal = "^2.1"
odmantic = "^0.3.5"
schema = "^0.7.4"
redis = "^3.5.3"
loguru = "^0.5.3"
snowland-smx = "^0.3.1"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
#mypy = "^0.770"
#black = "^19.10b0"
#isort = "^4.3.21"
#autoflake = "^1.3.1"
#flake8 = "^3.7.9"
#pytest = "^5.4.1"
#sqlalchemy-stubs = "^0.3"
#pytest-cov = "^2.8.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
