[tool.poetry]
name = "a"
version = "0.0.1"
description = ""
authors = ["mio <liurusi.101@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
fastapi = "^0.65.0"
#python-multipart = "^0.0.5"
#email-validator = "^1.0.5"
#requests = "^2.23.0"
#passlib = {extras = ["bcrypt"], version = "^1.7.2"}
tenacity = "^6.1.0"
pydantic = "^1.4"
#raven = "^6.10.0"
gunicorn = "^20.0.4"
motor = "^2.4.0"
#jinja2 = "^2.11.2"
#pytest = "^5.4.1"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
aio-pika = "^6.8.0"
aiocache = {extras = ["redis"], version = "^0.11.1"}
uvloop = "^0.15.2"
python-dateutil = "^2.8.1"
pytz = "^2021.1"
tzlocal = "^2.1"

[tool.poetry.dev-dependencies]
#mypy = "^0.770"
#black = "^19.10b0"
#isort = "^4.3.21"
#autoflake = "^1.3.1"
#flake8 = "^3.7.9"
#pytest = "^5.4.1"
#sqlalchemy-stubs = "^0.3"
#pytest-cov = "^2.8.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
